test/error/logi_and_check.colgm
func foo(bar: i64*) {
    if (bar && 1 == 1) {
        bar[0] = 1;
    }
    if (1 == 1 && bar) {
        bar[0] = 1;
    }
    if (bar || 1 == 1) {
        bar[0] = 1;
    }
    if (1 == 1 || bar) {
        bar[0] = 1;
    }
}

func main() -> i64 {
    var a = 0;
    foo(a.__ptr__());
    return a;
}