test/error/logi_and_check.result
Error: expect "bool" but get "i64*"
  --> test/error/logi_and_check.colgm:2:9
  | 
2 |     if (bar && 1 == 1) {
  |         ^^^

Error: expect "bool" but get "i64*"
  --> test/error/logi_and_check.colgm:5:19
  | 
5 |     if (1 == 1 && bar) {
  |                   ^^^

Error: expect "bool" but get "i64*"
  --> test/error/logi_and_check.colgm:8:9
  | 
8 |     if (bar || 1 == 1) {
  |         ^^^

Error: expect "bool" but get "i64*"
  --> test/error/logi_and_check.colgm:11:19
   | 
11 |     if (1 == 1 || bar) {
   |                   ^^^